# chess

./: .gitignore  CLAUDE.md  CMakeLists.txt  PROTOCOL.md  main.cpp
.claude/skills/hebrew-rtl-artifact/: SKILL.md
backend/: chess_main.cpp
backend/engine/: GameEngine.cpp  GameEngine.hpp  GameSnapshot.cpp  GameSnapshot.hpp
backend/input/: Controller.cpp  Controller.hpp
backend/model/: GameState.hpp
backend/realtime/: RealTimeArbiter.cpp  RealTimeArbiter.hpp
backend/tests/: Engine.tests.cpp  EngineSnapshot.tests.cpp  GameSnapshot.tests.cpp  Protocol.tests.cpp  ProtocolJson.tests.cpp  RealTimeArbiter.tests.cpp  SpriteAnimation.tests.cpp  SpriteLoader.tests.cpp  UserRepository.tests.cpp
backend/texttests/: ScriptRunner.cpp
engine/: Engine.cpp  Engine.hpp  GameEngine.cpp  GameEngine.hpp
frontend/: live_demo.cpp  main.cpp  sprite_demo.cpp  view_demo.cpp
frontend/audio/: AudioPlayer.cpp  AudioPlayer.hpp  GameEventDetector.cpp  GameEventDetector.hpp  SoundLibrary.hpp
frontend/ui/: img.cpp  img.hpp
frontend/view/: GameSnapshot.cpp  GameSnapshot.hpp  Renderer.cpp  Renderer.hpp  SpriteLoader.cpp  SpriteLoader.hpp
input/: BoardMapper.cpp  BoardMapper.hpp  Controller.cpp  Controller.hpp
io/: BoardParser.cpp  BoardParser.hpp  BoardPrinter.cpp  BoardPrinter.hpp
model/: Board.cpp  Board.hpp  GameState.hpp  Piece.cpp  Piece.hpp  Position.hpp
network/: SnapshotAdapter.hpp  game_client.cpp  game_server.cpp  protocol_demo_client.cpp  protocol_demo_server.cpp  ws_echo_client.cpp  ws_echo_server.cpp
network/protocol/: JsonCodec.cpp  JsonCodec.hpp  MessageTypes.hpp  Messages.hpp
network/win32_ui/: LoginWindow.cpp  LoginWindow.hpp
persistence/: Database.cpp  Database.hpp  UserRepository.cpp  UserRepository.hpp  persistence_demo.cpp
realtime/: RealTimeArbiter.cpp  RealTimeArbiter.hpp
rules/: Movement.hpp  PieceRules.cpp  PieceRules.hpp  RuleEngine.cpp  RuleEngine.hpp
src/: Board.cpp  Engine.cpp  Engine.hpp  GameState.hpp  Movement.cpp  Movement.hpp  config.hpp  main.cpp
tests/: Board.tests.cpp  Config.tests.cpp  Engine.tests.cpp  Movement.tests.cpp  Piece.tests.cpp
texttests/: ScriptRunner.cpp  ScriptRunner.hpp
